--- a/themes/akazie-forest/templates/modular/pricing.html.twig
+++ b/themes/akazie-forest/templates/modular/pricing.html.twig
@@ -1,7 +1,7 @@
 <div class="price-area">
     <div class="container">
         <div class="primary-title">
-            <h6>{{page.header.section.title.subHeading}}</h6>
+            <h6 class="text-uppercase">{{page.header.section.title.subHeading}}</h6>
             <h2>{{page.header.section.title.heading}}</h2>
             <p>{{page.header.section.title.text}}</p>
         </div>
